--- a/K_Means Clustering/Clustering Analysis.ipynb
+++ b/K_Means Clustering/Clustering Analysis.ipynb
@@ -16,6 +16,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "0c16a495",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "upload or not\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"upload or not\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "21301e6c",
    "metadata": {},
