--- a/K_Means Clustering/Clustering Analysis.ipynb
+++ b/K_Means Clustering/Clustering Analysis.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "0c16a495",
    "metadata": {},
    "outputs": [
@@ -25,12 +25,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "upload or not\n"
+      "upload or not\n",
+      "why its not coming\n"
      ]
     }
    ],
    "source": [
-    "print(\"upload or not\")"
+    "print(\"upload or not\")\n",
+    "print(\"why its not coming\")"
    ]
   },
   {
