--- a/K_Means Clustering/K-means clustering on loan prediction.ipynb
+++ b/K_Means Clustering/K-means clustering on loan prediction.ipynb
@@ -17,6 +17,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "acec8c54",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lets do new \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"lets do new \")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 31,
    "id": "e8a3da67",
    "metadata": {},
